--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
-    "next": "latest",
+    "next": "^12.0.7",
     "next-redux-wrapper": "^6.0.2",
     "postcss": "^8.2.6",
     "react": "17.0.1",
